# aiChatGptAgent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.json  docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py  accounts.py  ai.py  app.py  codex_pool.py  design.py  gallery.py  gateway.py  image_tasks.py  mailcode.py  register.py  sentiment.py  support.py  system.py
docs/: android-integration.md  feature-status.en.md  smspro-api.md  upstream-sse-conversation.md
scripts/: migrate_storage.py  pre-push-check.sh  test_storage.py
services/: account_service.py  auth_service.py  backup_service.py  codex_pool_service.py  config.py  content_filter.py  cpa_service.py  design_agent_service.py  gallery_service.py  gateway_service.py  image_edits_service.py  image_owners_service.py  image_prompts_service.py  image_service.py  image_tags_service.py  image_task_service.py  log_service.py  openai_api_backend.py  openai_backend_api.py  proxy_service.py  register_service.py  sentiment_service.py  sub2api_service.py
test/: test_account_image_capabilities.py  test_config.py  test_generations.py  test_generations_url.py  test_image.py  test_image_base_url_api.py  test_image_task_service.py  test_image_tasks_api.py  test_v1_chat_completions.py  test_v1_images_edits.py  test_v1_images_generations.py  test_v1_messages.py  test_v1_models.py  test_v1_responses.py  utils.py
utils/: helper.py  log.py  pow.py  turnstile.py
web/: next.config.ts  package-lock.json  package.json
(+95 files in other folders)
